Add device unique id
